tmp/funnel-output_path-igvwlusp.tmp/client1/tests/unit/pods/errors/new/controller-test.jshint.js
/home/ubuntu/workspace/client1/tmp/jshinter-output_path-CTP39jRs.tmp/unit/pods/errors/new/controller-test.jshint.js